--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -17,6 +17,17 @@ jobs:
       - name: Check format
         run: crystal tool format --check
 
+  check_ameba:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Crystal
+        uses: crystal-lang/install-crystal@v1
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: shards install
+      - name: Check ameba
+        run: ./bin/ameba
   test:
     runs-on: ubuntu-latest
     strategy:
