--- a/shard.yml
+++ b/shard.yml
@@ -64,6 +64,7 @@ dependencies:
     github: mamantoha/time_duration
   cmark:
     github: amauryt/cr-cmark-gfm
+    version: 0.1.3
     branch: master
   noir:
     github: MakeNowJust/noir
