--- a/shard.yml
+++ b/shard.yml
@@ -69,8 +69,8 @@ dependencies:
   cmark:
     github: amauryt/cr-cmark-gfm
     version: 0.1.2
-  noir:
-    github: MakeNowJust/noir
+  tartrazine:
+    github: ralsina/tartrazine
     branch: main
   autolink:
     github: crystal-community/autolink.cr
