temporary use cr-cmark-gfm fork

--- a/shard.override.yml
+++ b/shard.override.yml
@@ -2,3 +2,6 @@ dependencies:
   redis:
     github: jgaskins/redis
     branch: master
+  cmark:
+    github: mamantoha/cr-cmark-gfm
+    branch: fix-build
