throttle requests per minute

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DATABASE_URL=postgres://postgres@localhost/shards_info_development
 REDIS_URL=redis://localhost:6379/0
 SESSION_REDIS_URL=redis://localhost:6379/1
 MOSQUITO_REDIS_URL=redis://localhost:6379/2
+DEFENSE_REDIS_URL=redis://localhost:6379/3
 GITHUB_USER=
 GITHUB_KEY=
 GITLAB_ACCESS_TOKEN=
