--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -92,7 +92,8 @@ jobs:
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost/shards_info_test
           SESSION_REDIS_URL: redis://localhost:6379/1
-          MOSQUITO_REDIS_URL: redis://localhost:6379/1
+          MOSQUITO_REDIS_URL: redis://localhost:6379/2
+          DEFENSE_REDIS_URL: redis://localhost:6379/3
           KEMAL_ENV: test
           KEMAL_SESSION_SECRET: some_secret
           GITHUB_CLIENT_ID: ''
