--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -91,6 +91,7 @@ jobs:
         run: crystal spec
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost/shards_info_test
+          REDIS_URL: redis://localhost:6379/0
           SESSION_REDIS_URL: redis://localhost:6379/1
           MOSQUITO_REDIS_URL: redis://localhost:6379/2
           DEFENSE_REDIS_URL: redis://localhost:6379/3
