use mamantoha/device_detector

--- a/shard.yml
+++ b/shard.yml
@@ -90,7 +90,8 @@ dependencies:
   cadmium_transliterator:
     github: cadmiumcr/transliterator
   device_detector:
-    github: creadone/device_detector
+    github: mamantoha/device_detector
+    branch: develop
   ipapi:
     github: geocrystal/ipapi-crystal
 
