--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -9,7 +9,8 @@
     "selector-class-pattern": null,
     "value-keyword-case": null,
     "media-feature-range-notation": "prefix",
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "scss/at-extend-no-missing-placeholder": null
   },
   "ignoreFiles": [
     "**/*.js",
