--- a/shard.yml
+++ b/shard.yml
@@ -44,6 +44,7 @@ dependencies:
     branch: master
   lustra:
     github: crystal-garage/lustra
+    branch: develop
   retriable:
     github: Sija/retriable.cr
   delegator:
