show flag for active users

--- a/shard.yml
+++ b/shard.yml
@@ -96,6 +96,8 @@ dependencies:
     branch: develop
   ipapi:
     github: geocrystal/ipapi-crystal
+  flag_emoji:
+    github: mamantoha/flag_emoji
 
 development_dependencies:
   spec-kemal:
