fix ameba on ci

--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: shards install
       - name: Check ameba
-        run: ./bin/ameba
+        run: crystal ./bin/ameba.cr
   test:
     runs-on: ubuntu-latest
     strategy:
