fix Unknown yaml attribute: ExcludeTypeDeclarations

--- a/.ameba.yml
+++ b/.ameba.yml
@@ -2,7 +2,7 @@ Naming/BlockParameterName:
   Enabled: false
 
 Lint/UselessAssign:
-  ExcludeTypeDeclarations: true
+  Enabled: true
   Excluded:
     - src/web.cr
 
