--- a/.ameba.yml
+++ b/.ameba.yml
@@ -1,3 +1,8 @@
+Metrics/CyclomaticComplexity:
+  Enabled: true
+  Excluded:
+    - src/helpers/helpers.cr
+
 Naming/BlockParameterName:
   Enabled: false
 
