kemal from master

--- a/shard.override.yml
+++ b/shard.override.yml
@@ -2,6 +2,9 @@ dependencies:
   redis:
     github: jgaskins/redis
     branch: master
+  kemal:
+    github: kemalcr/kemal
+    branch: master
   kemal-session:
     github: kemalcr/kemal-session
     branch: master
